 - Implemented the tools button with a couple CSS options.
 - Removed the nav.h dependency from html.cc
 - Made the repush() operation more general and suited for CSS use.
 - Fixed collapsing of whitespace entities in HTML mode.
 - Updated the URL resolver to comply with RFC-3986.
 - Fixed handling of META's content-type with no MIME type (e.g. only charset).
   Patches: Jorge Arellano Cid

dw

+- Moved clicked from ButtonResource to Resource.
   Patch: place (AKA corvid)
+- Cleaned up unused code in fltkviewbase.
   Patch: Johannes Hofmann
+- Added lout/msg.h and normalized debug messages to use it.
   Patch: Jorge Arellano Cid

-----------------------------------------------------------------------------

dillo-2.0

+- Ported Dillo from GTK1 to FLTK2.
 - Ported a susbstantial part of the code from C to C++ (FLTK2 is in C++).
 - Wrote a new library: Dlib. With "Dlib" Dillo doesn't need glib anymore.
 - Ported all the code to Dlib.
 - Fixed Http_must_use_proxy() to be case insensitive.
 - Fixed some leaks and bugs in the cookies dpi.
 - Made Dillo's UI Control Panel resizable on-the-fly.
 - Implemented a new, simpler, dillorc parser.
 - Added handling of "localhost" in file URIs.
 - Fix: recognize "http://foo" and "http://foo/" as the same URL (BUG#497).
 - Reimplemented the Concomitant Callback chains into a uniform scheme!
   (two query branches and a single answer branch). It simplifies a lot the
   former CCC paths and allows for easier error control.
 - Added a new method for internally-generated urls: a_Cache_entry_inject().
 - Switched the cache to use Dlib's Dstr for its data storage.
 - Removed threads from IO. Now it only uses select-based watches.
 - Reimplemented IO.c and dpi.c to use Dlib's Dstr as its main buffer.
 - Turned Klist into a sorted list.
 - Removed one data-copy stage in Html_write_raw().
 - Switched gcc's "fmt..." syntax to ISO C __VA_ARGS__.
 - Fixed Dillo and its dpis to work from "/tmp" (for easy device unmount).